--- a/UI/Views/TestEditorView.xaml
+++ b/UI/Views/TestEditorView.xaml
@@ -2,26 +2,64 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:UI.Views"
-             xmlns:convertors="clr-namespace:UI.Convertors" 
+             xmlns:convertors="clr-namespace:UI.Convertors"
+             xmlns:selectors="clr-namespace:UI.Selectors"
+             xmlns:models="clr-namespace:UI.ObservableModels"
              xmlns:viewmodels="clr-namespace:UI.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:TestEditorViewModel}"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" 
+             xmlns:custom="clr-namespace:UI.CustomControls"
              mc:Ignorable="d" 
              d:DesignHeight="640" d:DesignWidth="1280">
     <UserControl.Resources>
         <convertors:IndexToNumberConverter x:Key="IndexToNum"/>
+        <convertors:EnumDescriptionConverter x:Key="EnumDescriptionConverter"/>
+        <BooleanToVisibilityConverter x:Key="BoolToVis"/>
 
         <!--Question template-->
         <DataTemplate x:Key="QuestionItem" DataType="models:ObservableQuestion">
             <Border>
                 <Label Content="{Binding RelativeSource={RelativeSource AncestorType=ListViewItem, AncestorLevel=1}, 
-                                 Path=(ItemsControl.AlternationIndex), 
-                                 Converter={StaticResource IndexToNum}}"
-               ContentStringFormat="Питання #{0}"
-               FontSize="24">
-                </Label>
+                                             Path=(ItemsControl.AlternationIndex), 
+                                             Converter={StaticResource IndexToNum}}"
+                           ContentStringFormat="Питання #{0}"
+                           FontSize="24"/>
             </Border>
         </DataTemplate>
+
+        <!--Option templates-->
+        <DataTemplate x:Key="SingleAnswerOptionTemplate" DataType="models:ObservableAnswerOption">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
+                <RadioButton IsChecked="{Binding IsChecked}" GroupName="Options"
+                             Margin="0,0,10,0"
+                             VerticalContentAlignment="Center">
+                    <TextBox Text="{Binding Model.Content}" FontSize="24" TextWrapping="Wrap"
+                             MinWidth="250"/>
+                </RadioButton>
+            </StackPanel>
+        </DataTemplate>
+
+        <DataTemplate x:Key="MultipleAnswerOptionTemplate" DataType="models:ObservableAnswerOption">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
+                <CheckBox IsChecked="{Binding IsChecked}"
+                          Margin="0,0,10,0"
+                          VerticalContentAlignment="Center">
+                    <TextBox Text="{Binding Model.Content}" FontSize="24" TextWrapping="Wrap"
+                             MinWidth="250"/>
+                </CheckBox>
+            </StackPanel>
+        </DataTemplate>
+
+        <DataTemplate x:Key="EnumItem">
+            <TextBlock Text="{Binding Converter={StaticResource EnumDescriptionConverter}}"
+                       VerticalAlignment="Center"/>
+        </DataTemplate>
+
+        <!--Selectors-->
+        <selectors:AnswerOptionTemplateSelector x:Key="AnswerOptionTemplateSelector"
+                                        RadioButtonTemplate="{StaticResource SingleAnswerOptionTemplate}"
+                                        CheckBoxTemplate="{StaticResource MultipleAnswerOptionTemplate}"/>
     </UserControl.Resources>
     
     <Grid>
@@ -37,32 +75,197 @@
                 <RowDefinition/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <StackPanel>
-                <Label Content="Test Name STRING"/>
-                <Label Content="Has description? BOOL"/>
-                <Label Content="Description STRING"/>
-                <Label Content="Status ENUM COMBOBOX"/>
-                <Label Content="Group OBJECT COMBOBOX"/>
-                <Label Content="Amount of attempts INT"/>
-                <Label Content="Has required grade? BOOL"/>
-                <Label Content="Required grade INT"/>
-                <Label Content="Has termin BOOL"/>
-                <Label Content="Termin DATETIME"/>
-                <Label Content="Has timer BOOL"/>
-                <Label Content="Timelimit TIMESPAN"/>
-            </StackPanel>
+            <ScrollViewer HorizontalScrollBarVisibility="Disabled">
+                <StackPanel>
+                    <StackPanel Orientation="Horizontal" 
+                                Margin="0,0,0,10">
+                        <Label Content="Назва тесту:" FontSize="14"
+                               VerticalAlignment="Top" Margin="0,0,10,0"/>
+                        <TextBox Text="{Binding CurrentTest.Name}" FontSize="14" MaxLines="1" MaxLength="100"
+                                 VerticalAlignment="Center" MinWidth="200" MaxWidth="225" Height="Auto"
+                                 TextWrapping="Wrap"/>
+                    </StackPanel>
+                    
+                    <CheckBox Content="Має опис" IsChecked="{Binding CurrentTest.HasDesription}" FontSize="14"
+                              VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0,0,0,10" Padding="5"
+                              VerticalContentAlignment="Center" FlowDirection="RightToLeft"/>
+                    
+                    <StackPanel Orientation="Horizontal" 
+                                Margin="0,0,0,10"
+                                Visibility="{Binding CurrentTest.HasDesription, Converter={StaticResource BoolToVis}}">
+                        <Label Content="Опис:" FontSize="14" 
+                               VerticalAlignment="Top" Margin="0,0,10,0"/>
+                        <TextBox Text="{Binding CurrentTest.Description}" FontSize="14"
+                                 VerticalAlignment="Center" Height="Auto" MinWidth="200" MaxWidth="250"
+                                 TextWrapping="Wrap"/>
+                    </StackPanel>
+                    
+                    <StackPanel Orientation="Horizontal" 
+                                Margin="0,0,0,10">
+                        <Label Content="Статус:" FontSize="14" 
+                               VerticalAlignment="Center" Margin="0,0,10,0"/>
+                        <ComboBox ItemsSource="{Binding TestStatuses}"
+                                  ItemTemplate="{StaticResource EnumItem}"
+                                  SelectedItem="{Binding SelectedTestStatus}"
+                                  FontSize="14"
+                                  VerticalAlignment="Center" MinWidth="200"/>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal" 
+                                Margin="0,0,0,10">
+                        <Label Content="Група:" FontSize="14" 
+                               VerticalAlignment="Center" Margin="0,0,10,0"/>
+                        <ComboBox ItemsSource="{Binding StudentGroups}"
+                                  SelectedItem="{Binding SelectedStudentGroup}"
+                                  DisplayMemberPath="Name"
+                                  FontSize="14"
+                                  VerticalAlignment="Center" MinWidth="200"/>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal" 
+                                Margin="0,0,0,10">
+                        <Label Content="Кількість спроб:" FontSize="14" 
+                               VerticalAlignment="Center" Margin="0,0,10,0"/>
+                        <custom:IntegerInputBox Text="{Binding CurrentTest.MaxAttempts}" FontSize="14" MaxLength="10" MaxLines="1"
+                                                VerticalAlignment="Center" MinWidth="200"/>
+                    </StackPanel>
+
+                    <CheckBox Content="Має прохідний бал" IsChecked="{Binding CurrentTest.HasRequiredGrade}" FontSize="14"
+                              VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0,0,0,10" Padding="5"
+                              VerticalContentAlignment="Center" FlowDirection="RightToLeft"/>
+
+                    <StackPanel Orientation="Horizontal" 
+                                Margin="0,0,0,10"
+                                Visibility="{Binding CurrentTest.HasRequiredGrade, Converter={StaticResource BoolToVis}}">
+                        <Label Content="Прохідний бал:" FontSize="14" 
+                               VerticalAlignment="Center" Margin="0,0,10,0"/>
+                        <custom:IntegerInputBox Text="{Binding CurrentTest.RequiredGrade}" FontSize="14" MaxLength="1000" MaxLines="1"
+                                                VerticalAlignment="Center" MinWidth="200"/>
+                    </StackPanel>
+
+                    <CheckBox Content="Має термін" IsChecked="{Binding CurrentTest.HasTermin}" FontSize="14"
+                              VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0,0,0,10" Padding="5"
+                              VerticalContentAlignment="Center" FlowDirection="RightToLeft"/>
+
+                    <StackPanel Orientation="Horizontal" 
+                                Margin="0,0,0,10"
+                                Visibility="{Binding CurrentTest.HasTermin, Converter={StaticResource BoolToVis}}">
+                        <Label Content="Термін:" FontSize="14" 
+                               VerticalAlignment="Center" Margin="0,0,10,0"/>
+                        <DatePicker SelectedDate="{Binding CurrentTest.Termin}" FontSize="14" 
+                                    VerticalAlignment="Center"/>
+                    </StackPanel>
+
+                    <CheckBox Content="Має часове обмеження" IsChecked="{Binding CurrentTest.HasTimer}" FontSize="14"
+                              VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0,0,0,10" Padding="5"
+                              VerticalContentAlignment="Center" FlowDirection="RightToLeft"/>
+
+                    <StackPanel Orientation="Horizontal" 
+                                Margin="0,0,0,10"
+                                Visibility="{Binding CurrentTest.HasTimer, Converter={StaticResource BoolToVis}}">
+                        <Label Content="Часове обмеження:" FontSize="14" 
+                               VerticalAlignment="Center" Margin="0,0,10,0"/>
+                        <xctk:TimePicker Value="{Binding TimeLimit}" Kind="Local" MinWidth="100"/>
+                    </StackPanel>
+                </StackPanel>
+            </ScrollViewer>
+            
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Button Content="Повернутись" FontSize="24" Command="{Binding AddQuestionCommand}"
+                <Button Content="Повернутись" FontSize="24" Command="{Binding BackCommand}"
                         HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Padding="25,5,25,5"
                         Grid.Column="0"/>
-                <Button Content="Зберегти" FontSize="24" Command="{Binding RemoveQuestionCommand}"
+                <Button Content="Зберегти" FontSize="24" Command="{Binding SaveTestCommand}"
                         HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Padding="25,5,25,5"
                         Grid.Column="1"/>
             </Grid>
+        </Grid>
+
+        <!--Редактор питання-->
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <StackPanel Grid.Row="0">
+                <!--Питання #i-->
+                <Label Content="{Binding SelectedQuestionNumber, FallbackValue='Question Number'}" 
+                       ContentStringFormat="Питання #{0}" 
+                       FontSize="24"
+                       HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,10,10"/>
+                
+                <!--Оцінка за питання-->
+                <Grid Margin="10,0,10,10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Label Content="Оцінка за питання:" FontSize="24"
+                           HorizontalAlignment="Left" Margin="0,0,10,0"
+                           Grid.Column="0"/>
+                    <custom:IntegerInputBox Text="{Binding SelectedQuestion.Model.GradeValue}" FontSize="24"
+                                            VerticalAlignment="Bottom"
+                                            Grid.Column="1"/>
+                </Grid>
+
+                <!--Тип питання-->
+                <Grid Margin="10,0,10,10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Label Content="Тип питання:" FontSize="24"
+                           HorizontalAlignment="Left" Margin="0,0,10,0"
+                           Grid.Column="0"/>
+                    <ComboBox ItemsSource="{Binding QuestionTypes}"
+                              ItemTemplate="{StaticResource EnumItem}"
+                              SelectedItem="{Binding SelectedQuestionType}"
+                              FontSize="24"
+                              VerticalAlignment="Center" Margin="10,0,10,0"
+                              Grid.Column="1"/>
+                </Grid>
+            </StackPanel>
+            
+            <!--Питання-->
+            <Border Grid.Row="1" Padding="25">
+                <TextBox Text="{Binding SelectedQuestion.Model.Content}" FontSize="24" TextWrapping="Wrap"
+                             VerticalAlignment="Stretch" Margin="10,0,10,0"/>
+            </Border>
+
+            <!--Список з варіантів відповіді-->
+            <ListView ItemsSource="{Binding SelectedQuestion.AnswerOptions}" SelectionMode="Single"
+                      SelectedItem="{Binding SelectedAnswerOption}"
+                      ItemTemplateSelector="{StaticResource AnswerOptionTemplateSelector}"
+                      VerticalAlignment="Top" HorizontalAlignment="Stretch" Margin="10,0,10,0"
+                      HorizontalContentAlignment="Stretch"
+                      Grid.Row="2"/>
+
+            <!--Кнопка додавання та видалення варіанту відповіді-->
+            <StackPanel Orientation="Horizontal" 
+                        HorizontalAlignment="Center" VerticalAlignment="Top"
+                        Grid.Row="3">
+                <Button Content="+" FontSize="24" Command="{Binding AddAnswerOptionCommand}"
+                        HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10" Padding="25,5,25,5"/>
+                <Button Content="-" FontSize="24" Command="{Binding RemoveAnswerOptionCommand}"
+                        HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10" Padding="25,5,25,5"/>
+
+            </StackPanel>
+            
+            <!--Кнопки перемикання питання-->
+            <Button Content="Минулий" FontSize="24" Command="{Binding PreviousCommand}"
+                    HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10" Padding="25,5,25,5"
+                    Grid.Row="3"
+                    Visibility="{Binding IsSelectedQuestionNotFirst, Converter={StaticResource BoolToVis}}"/>
+            <Button Content="Наступний" FontSize="24" Command="{Binding NextCommand}"
+                    HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="10" Padding="25,5,25,5"
+                    Grid.Row="3"
+                    Visibility="{Binding IsSelectedQuestionNotLast, Converter={StaticResource BoolToVis}}"/>
         </Grid>
 
         <!--Права бокова панель питань-->
